# net-diagnoser

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  项目管理主文档.md
deliverables/requirements-mvp/: REQUIREMENTS-SUMMARY.md
docs/: PRD-MVP.md  README.md  api-spec-mvp.md  architecture-mvp.md  change-management.md  milestone-acceptance-mvp.md  milestones-mvp.md  priority-matrix-mvp.md  test-plan-mvp.md  use-cases-mvp.md  user-guide-mvp.md  user-personas.md  user-stories-mvp.md  user-stories.md
manager-output/: progress-report-20260214.md  project-kickoff.md  risk-register.md
reports/: .gitkeep
roles/: 产品经理-PMD.md  开发工程师-DED.md  架构师-SAD.md  测试工程师-QED.md  项目经理-PjMD.md
src/: __init__.py  cli.py  config.py
src/agent/: __init__.py  base.py  diagnostic_agent.py  memory.py  prompts.py  tools.py
src/core/: __init__.py  ai_analyzer.py  audit_logger.py  command_whitelist.py  log_parser.py  report_generator.py  ssh_executor.py  tool_executor.py
src/parsers/: __init__.py  base.py  custom_parser.py  dmesg_parser.py  haproxy_parser.py  nginx_parser.py  syslog_parser.py
src/utils/: __init__.py  exceptions.py  file_handler.py  logger.py
tasks/: 任务列表-MVP.md
tests/: PANGEA_TEST_SUMMARY.md  __init__.py  pangea_diagnostic_commands.md  test_pangea_commands.py
tests/integration/: test_network_errors.py  test_ssh_workflow.py
tests/mocks/: __init__.py  network_simulator.py
tests/unit/: test_audit_logger.py  test_command_whitelist.py  test_config.py  test_dmesg_parser.py  test_file_handler.py  test_log_parser.py  (+3 more)
